#+OPTIONS: toc:nil, num:nil
#+TITLE:
#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="css/style.css" />

** 4.1.7

- Added setting to hide the checkboxes for completing tasks.
- Fix grouping by threshold date.

** 4.1.6

- Set correct create date for recurring tasks. Fixes [[http://mpcjanssen.nl/fossil/simpletask/tktview?name%3Db5608a1a97][b5608a1a97]].
- Fixed website URL (Thanks Kyle)
- Fixed cursor position when adding a task with prefilled list or tag.
- Recognize dates at beginning of task. Fixes [[http://mpcjanssen.nl/tracker/issues/46][#46]].

** 4.1.5

- Fix crash when removing priority and cursor in last position.
	
** 4.1.4

- Added setting to only display =.txt= files in todo file browser.
- ChangeLog is viewable from inside the help menu.
- Add tasks from locksreen widget without unlocking.
- Setting to add new tasks at beginning of todo.txt.
- Allow completing and uncompleting of tasks from CAB.
- Speed up task archiving and possible fix for [[http://mpcjanssen.nl/tracker/issues/58][#58]].

** 4.1.3

- Removed Dropbox dependency of cloudless version. Only released through FDroid.

** 4.1.2

- Archive selected tasks only.
- Edit multiple tasks at once.
- Re-added donation link for f-droid users.
- Changed default wordwrapping in =AddTask= to on.

** 4.1.1

- Fix crashes with invalid dates such as =2013-11-31=.
- Refactored header handling.
- Setting to hide headers with only hidden tasks.

** 4.1.0

- Support hidden tasks (with h:1). This allows persistent list/tags. Tasks can be unhidden from the settings.

** 4.0.10

- Don't crash on a =++tag= when show tags is unchecked. Fixes [[http://mpcjanssen.nl/fossil/simpletask/tktview?name%3D9c5902][9c5902]].

** 4.0.9

- Add setting to capitalize tasks.
- Sort list and tag popups in AddTask screen.
- Add option to toggle wordwrap when adding tasks.
- Add filter option to hide tags and lists on task display.

** 4.0.8
