@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
 <title></title>
-<!-- 2014-02-09 zo 22:50 -->
+<!-- 2014-02-09 zo 23:12 -->
 <meta  http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta  name="generator" content="Org-mode" />
 <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -55,6 +55,7 @@
 <div id="content">
 <h1 class="title"></h1>
 
+
 <div id="outline-container-sec-0-1" class="outline-3">
 <h3 id="sec-0-1">4.1.7</h3>
 <div class="outline-text-3" id="text-0-1">
@@ -70,7 +71,7 @@
 <h3 id="sec-0-2">4.1.6</h3>
 <div class="outline-text-3" id="text-0-2">
 <ul class="org-ul">
-<li>Set correct create date for recurring tasks. Fixes <a href="http://mpcjanssen.nl/fossil/simpletask/tktview?name%3Db5608a1a97">b5608a1a97</a>.
+<li>Set correct create date for recurring tasks. Fixes <a href="http://mpcjanssen.nl/fossil/simpletask/tktview?name=b5608a1a97">b5608a1a97</a>.
 </li>
 <li>Fixed website URL (Thanks Kyle)
 </li>
@@ -159,7 +160,7 @@
 <h3 id="sec-0-9">4.0.10</h3>
 <div class="outline-text-3" id="text-0-9">
 <ul class="org-ul">
-<li>Don't crash on a <code>++tag</code> when show tags is unchecked. Fixes <a href="http://mpcjanssen.nl/fossil/simpletask/tktview?name%3D9c5902">9c5902</a>.
+<li>Don't crash on a <code>++tag</code> when show tags is unchecked. Fixes <a href="http://mpcjanssen.nl/fossil/simpletask/tktview?name=9c5902">9c5902</a>.
 </li>
 </ul>
 </div>
