@@ -2,6 +2,7 @@
 #+TITLE:
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="css/style.css" />
 
+
 ** 4.1.7
 
 - Added setting to hide the checkboxes for completing tasks.
@@ -9,7 +10,7 @@
 
 ** 4.1.6
 
-- Set correct create date for recurring tasks. Fixes [[http://mpcjanssen.nl/fossil/simpletask/tktview?name%3Db5608a1a97][b5608a1a97]].
+- Set correct create date for recurring tasks. Fixes [[http://mpcjanssen.nl/fossil/simpletask/tktview?name=b5608a1a97][b5608a1a97]].
 - Fixed website URL (Thanks Kyle)
 - Fixed cursor position when adding a task with prefilled list or tag.
 - Recognize dates at beginning of task. Fixes [[http://mpcjanssen.nl/tracker/issues/46][#46]].
@@ -50,7 +51,7 @@
 
 ** 4.0.10
 
-- Don't crash on a =++tag= when show tags is unchecked. Fixes [[http://mpcjanssen.nl/fossil/simpletask/tktview?name%3D9c5902][9c5902]].
+- Don't crash on a =++tag= when show tags is unchecked. Fixes [[http://mpcjanssen.nl/fossil/simpletask/tktview?name=9c5902][9c5902]].
 
 ** 4.0.9
 
